--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
 PORT=8001
-JAEGER_AGENT_HOST=localhost
-JAEGER_AGENT_PORT=6831
-JAEGER_SAMPLER_TYPE=const
-JAEGER_SAMPLER_PARAM=1
+DATABASE_URL=localhost
 DATABASE_USER=postgres
+DATABASE_PORT=54325
 DATABASE_PASSWORD=postgres
-DATABASE_DB=sms-db
-REDIS_ADDRESS=localhost
-NATS_URL=nats://127.0.0.1:4222
+DATABASE_DB=servers-db
